--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - 'Berksfile'
     - 'Thorfile'
     - 'Gemfile'
+    - 'metadata.rb'
     - 'test/**/*'
     - 'bin/**'
     - 'vendor/**/*'
